# BlockChain

./: .gitignore  CMakeLists.txt  ClientsLauncher  Makefile  MinerLauncher  blockchain  client  cmake_install.cmake  compile_commands.json  main  miner  node
.cmake/api/v1/reply/: cache-v2-cd64cad35e2d2a460bc2.json  cmakeFiles-v1-80306c2ad30cc9a2ce9c.json  codemodel-v2-4848f254c92728384b55.json  index-2026-05-22T10-29-43-0287.json  target-Gonzato_Luongo_Griggio-Debug-e3d2e20ec05e3d418526.json
code/: Makefile  TODO  blockchain.sh
code/include/: ClientManager.h  blocco.h  block.h  blocksPool.h  childProcess.h  client.h  communicationProtocol.h  constants.h  crypto.h  error.h  message.h  miner.h  minerCommunicationProtocol.h  minerStatus.h  minerThread.h  node.h  nodeCSV.h  nodeContext.h  nodeFIFO.h  nodeStatus.h  nodeValidation.h  protocolSocket.h  repl.h  transactionPool.h  utils.h
code/include/communication/: communicationProtocol.h  message.h  protocolSocket.h  transactionPool.h
code/include/miner/: miner.h  minerCommunicationProtocol.h  minerFifo.h  minerStatus.h  minerThread.h
code/include/node/: node.h  nodeCSV.h  nodeContext.h  nodeFIFO.h  nodeListener.h  nodeLog.h  nodeStatus.h  nodeValidation.h
code/src/: ClientProcess.c  ClientsLauncher.c  MinerCommunicationProcess.c  MinerLauncher.c  block.c  blocksPool.c  childProcess.c  client.c  crypto.c  main.c  message.c  miner.c  minerCommunicationProcess.c  minerCommunicationProtocol.c  minerMiningThread.c  minerStatus.c  minerThread.c  node.c  nodeCSV.c  nodeContext.c  nodeLog.c  nodeStatus.c  protocolSocket.c  repl.c  transactionPool.c  utils.c
code/src/communication/: message.c  protocolSocket.c  transactionPool.c
code/src/miner/: miner.c  minerCommunicationProcess.c  minerCommunicationProtocol.c  minerFifo.c  minerStatus.c  minerThread.c
code/src/node/: node.c  nodeCSV.c  nodeFIFO.c  nodeListener.c  nodeLog.c  nodeStatus.c  nodeValidation.c
code/src/output/main.dSYM/Contents/Resources/DWARF/: main
code/src/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: Makefile
